# openxl

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  NOTES  PAYMENTS  Plan  README  configure.ac  xl.pc.in
apps/: Makefile.am
apps/xlTerminal/: Makefile.am  Plan
demos/: Makefile.am  myImage.c  myImage.h  myMaterial.c  myMaterial.h  myModel.c  myModel.h  myObject.c  myObject.h  mySurface.c  mySurface.h  xlCharacters.c  xlColors.c  xlDemo.c  xlDemo.h  xlImage.c  xlImageCube.c  xlImageString.c  xlMatrix.c  xlMatrixAssign.c  xlMatrixCmp.in  xlObjectString.c  xlPoints.c  xlPort.c  xlStuff.c  xlSurfaceCube.c  xlVector.c  xlVectorAssign.c  xlVectorCmp.in  xlVectors.c  xlc.c  xlcity.c  xld.c  xldatadirs.in  xlinfo.c  xlmatrix.c  xlmatrixassign.c  xlmatrixcmp.in  xlmodel.c  xlobject.c  (+6 more)
demos/data/cameras/: Default.xld  Ortho.xld  Perspective.xld  Pivot.xld
demos/data/fonts/: Default.xld
demos/data/images/: Manual.xld
demos/data/materials/: Boatheel.xld  Boaticle.xld  Boator.xld  Cubheel.xld  Cubicle.xld  CubightBack.xld  CubightFront.xld  Default.xld  Door.xld  Ground.xld  House.xld  Manual.xld  Monkey.xld  Particles.xld  Roof.xld  SimpleMan.xld  SimpleWoman.xld  Test.xld  Test2.xld  Test3.xld  TestReal.xld  Wall.xld
demos/data/models/: Boaticle.xld  Cube.xld  Cubicle.xld  CubicleLight.xld  CubicleLights.xld  Heightmap.xld  House.xld  Monkey.xld  RealRobot.xld  Robot.xld  SimpleMan.xld  SimpleWoman.xld  String.xld  TV.xld  houselod.xld  monkeylod.xld
demos/data/objects/: Boaticle.xld  Cube.xld  Cubicle.xld  CubicleLight.xld  CubicleLights.xld  Heightmap.xld  House.xld  Monkey.xld  Robot.xld  SimpleMan.xld  SimpleWoman.xld  String.xld  TV.xld  houselod.xld  monkeylod.xld
demos/data/operators/: Ortho.xld  Perspective.xld  Pivot.xld  Rotate.xld
demos/data/particles/: Colors.xld  Pairs.xld  Points.xld  Test.xld  Vectors.xld
demos/data/ports/: Camera.xld  CubicleLights.xld  Generic.xld  Heightmap.xld  Robot.xld
demos/data/surfaces/: Door.xld  Ground.xld  House.xld  Monkey.xld  Particles.xld  Roof.xld  Test.xld  Test2.xld  Test3.xld  TestReal.xld  Wall.xld  Wood.xld
demos/data/viewports/: Default.xld
demos/data/windows/: Default.xld
design/blender/: Boatheel.xcf  Boaticle.blend  Boaticle.xcf  Boaticle.xld  Boator.xcf  Cubheel.xcf  Cubicle.blend  Cubicle.xcf  Cubicle.xld  NOTES  SimpleManXL.blend  SimpleWomanXL.blend
design/gimp/: Credits.xcf  Cubicle.xcf  Dorsal.xcf  Exit.xcf  Help.xcf  Homepage.xcf  Race.xcf  Settings.xcf  ToyCars2.xcf
doc/: Makefile.am  xlcolors  xlpairs  xlpoints  xlvectors  youtube
games/: Makefile.am
games/xlAdventure/: Makefile.am  Plan
games/xlSpaceWar/: Makefile.am  xlSpaceWar  xlSpaceWar.c
games/xlSpaceWars/: Makefile.am  Plan  xlSpaceWars  xlSpaceWars.c
games/xlToyMachines/: Makefile.am  Plan  xlToyMachines
src/: Makefile.am  xl.c  xlBind.c  xlCamera.c  xlColor.c  xlCompile.c  xlData.c  xlDebug.c  xlDecompile.c  xlDelete.c  xlDraw.c  xlError.c  xlExport.c  xlFont.c  xlGen.c  xlGet.c  xlImage.c  xlImport.c  xlLoad.c  xlLog.c  xlMacros.c  xlMaterial.c  xlMatrix.c  xlModel.c  xlObject.c  xlOperator.c  xlPair.c  xlParser.c  xlParticles.c  xlPipeline.c  xlPoint.c  xlPort.c  xlSave.c  xlSet.c  xlSound.c  xlSphere.c  xlSurface.c  xlSync.c  xlTexturizer.c  xlType.c  (+7 more)
src/FL/: av.c  flSound.c  xlflut.c
src/XL/: id.h  unid.h  xl.h  xlBind.h  xlCamera.h  xlColor.h  xlCompile.h  xlData.h  xlDebug.h  xlDecompile.h  xlDelete.h  xlDraw.h  xlError.h  xlExport.h  xlFont.h  xlGen.h  xlGet.h  xlImage.h  xlImport.h  xlLoad.h  xlLog.h  xlMacros.h  xlMaterial.h  xlMatrix.h  xlModel.h  xlObject.h  xlOperator.h  xlPair.h  xlParser.h  xlParticles.h  xlPipeline.h  xlPoint.h  xlPort.h  xlSave.h  xlSet.h  xlSound.h  xlSphere.h  xlSurface.h  xlSync.h  xlTexturizer.h  (+8 more)
src/XL/AL/: xlalut.h
src/XL/FL/: av.h  flSound.h  xlflut.h
src/XL/GL/: xlglut.h
tools/: Makefile.am  xlc.c  xld.c  xlinfo.c
tools/blender/: io_export_xlmaterial.py  io_export_xlmodel.py  io_export_xlobject.py
tools/gimp/: README  README.tp  xl-gimp  xl-gimp-images  xl-gimp-images-batch  xl.scm
tools/pkgconfig/: ffmpeg.pc  libbzip2.pc  libm.pc  magic.pc  xlalut.pc  xlflut.pc  xlglut.pc
