xld_data = \
	data/images/Tux.png \
	data/images/Tux.gif \
	data/images/Manual.xld \
	data/images/Flake.png \
	data/images/Flake2.png \
	data/images/Flake3.png \
	data/images/House.png \
	data/images/House-Blur.png \
	data/images/Cubicle.png \
	data/images/Cubheel.png \
	data/images/CubicleBlue.png \
	data/images/Boaticle.png \
	data/images/Boatheel.png \
	data/images/Boator.png \
	data/images/LightYellow.png \
	data/images/LightRed.png \
	data/images/SimpleMan.png \
	data/images/SimpleWoman.png \
	data/sounds/abe-intro.ogg \
	data/fonts/VeraBd.ttf \
	data/fonts/DejaVuSans-Bold.ttf \
	data/fonts/Default.xld \
	data/materials/Default.xld \
	data/materials/Manual.xld \
	data/materials/Test.xld \
	data/materials/Test2.xld \
	data/materials/Test3.xld \
	data/materials/Wood.xld \
	data/materials/House.xld \
	data/materials/Cubicle.xld \
	data/materials/Cubheel.xld \
	data/materials/Boaticle.xld \
	data/materials/Boatheel.xld \
	data/materials/Boator.xld \
	data/materials/Particles.xld \
	data/materials/TestReal.xld \
	data/materials/Wall.xld \
	data/materials/Door.xld \
	data/materials/Ground.xld \
	data/materials/Roof.xld \
	data/materials/Monkey.xld \
	data/materials/SimpleMan.xld \
	data/materials/SimpleWoman.xld \
	data/surfaces/Default.xld \
	data/surfaces/Test.xld \
	data/surfaces/Test2.xld \
	data/surfaces/Test3.xld \
	data/surfaces/Wood.xld \
	data/surfaces/House.xld \
	data/surfaces/Particles.xld \
	data/surfaces/TestReal.xld \
	data/surfaces/Wall.xld \
	data/surfaces/Door.xld \
	data/surfaces/Ground.xld \
	data/surfaces/Roof.xld \
	data/surfaces/Monkey.xld \
	data/objects/Cube.xld \
	data/objects/String.xld \
	data/objects/Robot.xld \
	data/objects/Monkey.xld \
	data/objects/monkeylod.xld \
	data/objects/House.xld \
	data/objects/houselod.xld \
	data/objects/Cubicle.xld \
	data/objects/CubicleLight.xld \
	data/objects/CubicleLights.xld \
	data/objects/Boaticle.xld \
	data/objects/Heightmap.xld \
	data/objects/TV.xld \
	data/objects/SimpleMan.xld \
	data/objects/SimpleWoman.xld \
	data/models/Cube.xld \
	data/models/String.xld \
	data/models/Robot.xld \
	data/models/RealRobot.xld \
	data/models/Monkey.xld \
	data/models/monkeylod.xld \
	data/models/House.xld \
	data/models/Cubicle.xld \
	data/models/CubicleLight.xld \
	data/models/CubicleLights.xld \
	data/models/Boaticle.xld \
	data/models/houselod.xld \
	data/models/Heightmap.xld \
	data/models/TV.xld \
	data/models/SimpleMan.xld \
	data/models/SimpleWoman.xld \
	data/particles/Pairs.xld \
	data/particles/Points.xld \
	data/particles/Vectors.xld \
	data/particles/Colors.xld \
	data/particles/Test.xld \
	data/ports/Camera.xld \
	data/ports/Generic.xld \
	data/ports/Robot.xld \
	data/ports/CubicleLights.xld \
	data/ports/Heightmap.xld \
	data/cameras/Perspective.xld \
	data/cameras/Default.xld \
	data/cameras/Ortho.xld \
	data/cameras/Pivot.xld \
	data/operators/Perspective.xld \
	data/operators/Ortho.xld \
	data/operators/Pivot.xld \
	data/operators/Rotate.xld \
	data/viewports/Default.xld \
	data/windows/Default.xld

#	data/fonts/VeraBd.xlc \
#	data/fonts/DejaVuSans-Bold.xlc
xlc_data = \
	xldatadirs \
	data/images/Tux.xlc \
	data/images/Manual.xlc \
	data/images/Textil.xlc \
	data/images/Wood.xlc \
	data/images/Grass.xlc \
	data/images/Flake.xlc \
	data/images/Flake2.xlc \
	data/images/Flake3.xlc \
	data/images/House.xlc \
	data/images/House-Blur.xlc \
	data/images/Cubicle.xlc \
	data/images/Cubheel.xlc \
	data/images/CubicleBlue.xlc \
	data/images/Boaticle.xlc \
	data/images/Boatheel.xlc \
	data/images/Boator.xlc \
	data/images/LightYellow.xlc \
	data/images/LightRed.xlc \
	data/images/SimpleMan.xlc \
	data/images/SimpleWoman.xlc \
	data/materials/Test.xlc \
	data/surfaces/Test.xlc \
	data/objects/Cube.xlc \
	data/models/Cube.xlc \
	data/fonts/Default.xlc \
	data/materials/Default.xlc \
	data/materials/Manual.xlc \
	data/materials/Test.xlc \
	data/materials/Test2.xlc \
	data/materials/Test3.xlc \
	data/materials/Wood.xlc \
	data/materials/House.xlc \
	data/materials/Cubicle.xlc \
	data/materials/Cubheel.xlc \
	data/materials/Boaticle.xlc \
	data/materials/Boatheel.xlc \
	data/materials/Boator.xlc \
	data/materials/Particles.xlc \
	data/materials/TestReal.xlc \
	data/materials/Wall.xlc \
	data/materials/Door.xlc \
	data/materials/Ground.xlc \
	data/materials/Roof.xlc \
	data/materials/Monkey.xlc \
	data/materials/SimpleMan.xlc \
	data/materials/SimpleWoman.xlc \
	data/surfaces/Default.xlc \
	data/surfaces/Test.xlc \
	data/surfaces/Test2.xlc \
	data/surfaces/Test3.xlc \
	data/surfaces/Wood.xlc \
	data/surfaces/House.xlc \
	data/surfaces/Particles.xlc \
	data/surfaces/TestReal.xlc \
	data/surfaces/Wall.xlc \
	data/surfaces/Door.xlc \
	data/surfaces/Ground.xlc \
	data/surfaces/Roof.xlc \
	data/surfaces/Monkey.xlc \
	data/objects/Cube.xlc \
	data/objects/String.xlc \
	data/objects/Robot.xlc \
	data/objects/Monkey.xlc \
	data/objects/monkeylod.xlc \
	data/objects/House.xlc \
	data/objects/houselod.xlc \
	data/objects/Cubicle.xlc \
	data/objects/CubicleLight.xlc \
	data/objects/CubicleLights.xlc \
	data/objects/Boaticle.xlc \
	data/objects/Heightmap.xlc \
	data/objects/TV.xlc \
	data/objects/SimpleMan.xlc \
	data/objects/SimpleWoman.xlc \
	data/models/Cube.xlc \
	data/models/String.xlc \
	data/models/Robot.xlc \
	data/models/RealRobot.xlc \
	data/models/Monkey.xlc \
	data/models/monkeylod.xlc \
	data/models/House.xlc \
	data/models/Cubicle.xlc \
	data/models/CubicleLight.xlc \
	data/models/CubicleLights.xlc \
	data/models/Boaticle.xlc \
	data/models/houselod.xlc \
	data/models/Heightmap.xlc \
	data/models/TV.xlc \
	data/models/SimpleMan.xlc \
	data/models/SimpleWoman.xlc \
	data/particles/Pairs.xlc \
	data/particles/Points.xlc \
	data/particles/Vectors.xlc \
	data/particles/Colors.xlc \
	data/particles/Test.xlc \
	data/cameras/Perspective.xlc \
	data/cameras/Default.xlc \
	data/cameras/Ortho.xlc \
	data/cameras/Pivot.xlc \
	data/operators/Perspective.xlc \
	data/operators/Ortho.xlc \
	data/operators/Pivot.xlc \
	data/operators/Rotate.xlc \
	data/viewports/Default.xlc \
	data/windows/Default.xlc
nobase_noinst_DATA = \
	$(xld_data)
nodist_noinst_DATA = \
	$(xlc_data)
check_SCRIPTS = \
	xlvectorcmp \
	xlmatrixcmp
noinst_LIBRARIES = \
	libmy.a \
	libxldemo.a
noinst_PROGRAMS = \
	xlinfo \
	xlc \
	xld \
	xlstuff \
	xlvector \
	xlvectorassign \
	xlmatrix \
	xlmatrixassign \
	xlimage \
	xlimagecube \
	xlimagestring \
	xlsurfacecube \
	xlobject \
	xlobjectstring \
	xlmodel \
	xlpairs \
	xlcolors \
	xlpoints \
	xlvectors \
	xlparticles \
	xlcharacters \
	xlport \
	xlcity
TESTS = \
	xlinfo \
	xlstuff \
	xlvector \
	xlvectorassign \
	xlvectorcmp \
	xlmatrix \
	xlmatrixassign \
	xlmatrixcmp
EXTRA_DIST = \
	xlvectorcmp.in \
	xlmatrixcmp.in \
	xldatadirs.in \
	$(xld_data)
CLEANFILES = \
	$(check_SCRIPTS) \
	$(xlc_data)

xlinfo_SOURCES = \
	xlinfo.c
xlinfo_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
xlinfo_LDADD = \
	libmy.a \
	$(top_builddir)/src/libxl.la

xlstuff_SOURCES = \
	xlstuff.c
xlstuff_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
xlstuff_LDADD = \
	-L$(top_builddir)/src \
	-lxl

xlvector_SOURCES = \
	xlvector.c
xlvector_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
xlvector_LDADD = \
	-L$(top_builddir)/src \
	-lxl

xlvectorassign_SOURCES = \
	xlvectorassign.c
xlvectorassign_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
xlvectorassign_LDADD = \
	-L$(top_builddir)/src \
	-lxl

xlmatrix_SOURCES = \
	xlmatrix.c
xlmatrix_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
xlmatrix_LDADD = \
	-L$(top_builddir)/src \
	-lxl

xlmatrixassign_SOURCES = \
	xlmatrixassign.c
xlmatrixassign_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
xlmatrixassign_LDADD = \
	-L$(top_builddir)/src \
	-lxl

xlvectorcmp: xlvectorcmp.in
	cp $(top_srcdir)/demos/xlvectorcmp.in $@ 
	chmod +x $@

xlmatrixcmp: xlmatrixcmp.in
	cp $(top_srcdir)/demos/xlmatrixcmp.in $@
	chmod +x $@

xlc_SOURCES = \
	xlc.c
xlc_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
xlc_LDADD = \
	libmy.a \
	$(top_builddir)/src/libxl.la

xld_SOURCES = \
	xld.c
xld_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
xld_LDADD = \
	libmy.a \
	$(top_builddir)/src/libxl.la

libmy_a_SOURCES = \
	myImage.h \
	myImage.c \
	myMaterial.h \
	myMaterial.c \
	mySurface.h \
	mySurface.c \
	myObject.h \
	myObject.c \
	myModel.h \
	myModel.c
libmy_a_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
libmy_a_LIBADD = \
	$(top_builddir)/src/libxl.la

libxldemo_a_SOURCES = \
	xlDemo.h \
	xlDemo.c
libxldemo_a_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
libxldemo_a_LIBADD = \
	$(top_builddir)/src/libxl.la \
	$(top_builddir)/demos/libmy.a 

xlimage_SOURCES = \
	xlimage.c
xlimage_CPPFLAGS = \
	-Wall \
	-I$(top_srcdir)/src \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS)
xlimage_LDADD = \
	libxldemo.a \
	libmy.a \
	$(top_builddir)/src/libxl.la \
	$(XL_DEPS_LIBS)

xlimagecube_SOURCES = \
	xlimagecube.c
xlimagecube_CPPFLAGS = \
	-Wall \
	-I$(top_srcdir)/src \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS)
xlimagecube_LDADD = \
	libxldemo.a \
	libmy.a \
	$(top_builddir)/src/libxl.la \
	$(XL_DEPS_LIBS)

xlimagestring_SOURCES = \
	xlimagestring.c
xlimagestring_CPPFLAGS = \
	-Wall \
	-I$(top_srcdir)/src \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS)
xlimagestring_LDADD = \
	libxldemo.a \
	libmy.a \
	$(top_builddir)/src/libxl.la \
	$(XL_DEPS_LIBS)

xlsurfacecube_SOURCES = \
	xlsurfacecube.c
xlsurfacecube_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
xlsurfacecube_LDADD = \
	libxldemo.a \
	libmy.a \
	$(top_builddir)/src/libxl.la \
	$(XL_DEPS_LIBS)

xlobject_SOURCES = \
	xlobject.c
xlobject_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
xlobject_LDADD = \
	libxldemo.a \
	libmy.a \
	$(top_builddir)/src/libxl.la \
	$(XL_DEPS_LIBS)

xlobjectstring_SOURCES = \
	xlobjectstring.c
xlobjectstring_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
xlobjectstring_LDADD = \
	libxldemo.a \
	libmy.a \
	$(top_builddir)/src/libxl.la \
	$(XL_DEPS_LIBS)

xlmodel_SOURCES = \
	xlmodel.c
xlmodel_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
xlmodel_LDADD = \
	libxldemo.a \
	libmy.a \
	$(top_builddir)/src/libxl.la \
	$(XL_DEPS_LIBS)

xlpairs_SOURCES = \
	xlpairs.c
xlpairs_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
xlpairs_LDADD = \
	libxldemo.a \
	libmy.a \
	$(top_builddir)/src/libxl.la \
	$(XL_DEPS_LIBS)

xlcolors_SOURCES = \
	xlcolors.c
xlcolors_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
xlcolors_LDADD = \
	libxldemo.a \
	libmy.a \
	$(top_builddir)/src/libxl.la \
	$(XL_DEPS_LIBS)

xlpoints_SOURCES = \
	xlpoints.c
xlpoints_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
xlpoints_LDADD = \
	libxldemo.a \
	libmy.a \
	$(top_builddir)/src/libxl.la \
	$(XL_DEPS_LIBS)

xlvectors_SOURCES = \
	xlvectors.c
xlvectors_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
xlvectors_LDADD = \
	libxldemo.a \
	libmy.a \
	$(top_builddir)/src/libxl.la \
	$(XL_DEPS_LIBS)

xlparticles_SOURCES = \
	xlparticles.c
xlparticles_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
xlparticles_LDADD = \
	libxldemo.a \
	libmy.a \
	$(top_builddir)/src/libxl.la \
	$(XL_DEPS_LIBS)

xlcharacters_SOURCES = \
	xlcharacters.c
xlcharacters_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
xlcharacters_LDADD = \
	libxldemo.a \
	libmy.a \
	$(top_builddir)/src/libxl.la \
	$(XL_DEPS_LIBS)

xlport_SOURCES = \
	xlport.c
xlport_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
xlport_LDADD = \
	libxldemo.a \
	libmy.a \
	$(top_builddir)/src/libxl.la \
	$(XL_DEPS_LIBS)

xlcity_SOURCES = \
	xlcity.c
xlcity_CPPFLAGS = \
	-Wall \
	$(XL_DEPS_CFLAGS) \
	$(XL_REAL_CFLAGS) \
	$(XL_SIMD_CFLAGS) \
	$(XL_CFLAGS) \
	-I$(top_srcdir)/src
xlcity_LDADD = \
	libxldemo.a \
	libmy.a \
	$(top_builddir)/src/libxl.la \
	$(XL_DEPS_LIBS)

xldatadirs: xldatadirs.in
	cp $(top_srcdir)/demos/xldatadirs.in $@ 
	chmod +x $@
	./xldatadirs

data/images/Textil.xlc: xlc
	./xlc data/images/Textil.xl $@
data/images/Wood.xlc: xlc
	./xlc data/images/Wood.xl $@
data/images/Grass.xlc: xlc
	./xlc data/images/Grass.xl $@
data/materials/Test.xlc: xlc
	./xlc data/materials/Test.xl $@
data/surfaces/Test.xlc: xlc
	./xlc data/surfaces/Test.xl $@
data/objects/Cube.xlc: xlc
	./xlc data/objects/Cube.xl $@
data/objects/Model.xlc: xlc
	./xlc data/objects/Model.xl $@
.xld.xlc:
	./xlc $< $@
.png.xlc:
	./xlc $< $@
